progressive app completed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Manal Liaquat | Github Followers</title>
+    <title>Github Followers</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./icon/app-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,17 +18,15 @@
     <nav class="navbar navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand text-center" href="#">Git Hub Followers</a>
+                <a class="navbar-brand" href="#">Git Hub Fetch Users Example</a>
+                <div class="input">
+                    <input class="form-control" placeholder="Search" type="search" name="search" id="search">
+                  </div>
             </div>
         </div>
     </nav>
-    <div class="d-flex flex-nowrap">
-        <input type="search" name="search" class="form-control" id="search">
-        <button class="btn btn-info btn-lg" id="btn"><i class="fa fa-search"></i></button>
-    </div>
     <br>
     <div class="container-fluid d-flex flex-wrap" id="div">
-        <!-- dynamic content goes here -->
     </div>
     <br>
 
@@ -37,7 +35,7 @@
             <li class="nav-item">
                 <a class="nav-link active text-light" href="https://github.com/Usama-Aslam">
                     &copy;CopyRight 2018 by
-                    <abbr title="https://github.com/Usama-Aslam">Muhammad Usama</abbr>
+                    <i title="https://github.com/Usama-Aslam">Muhammad Usama</i>
                 </a>
             </li>
         </ul>
